--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: grid; 
+  grid-template-rows: 1fr 15fr 5fr;
 }
 
 ul {
@@ -7,18 +11,14 @@ ul {
 }
 
 .app-nav {
-  display: flex;
-	justify-content: space-between;
-  align-items: center;
   background: rgb(0, 0, 0);
   color: white;
   width: 100vw;
-  position: fixed;
+  /* position: fixed; */
   z-index: 3;
+  grid-row: 1; 
 }
 
-.app-name {
-  margin-left: 1rem;
-  text-decoration: none;
-  color: white; 
+.app-body {
+  grid-row: 2; 
 }
