--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -1,24 +1,20 @@
 .App {
-  text-align: center;
   height: 100vh;
   width: 100vw;
+  text-align: center;
   display: grid; 
-  grid-template-rows: 1fr 15fr 5fr;
-}
-
-ul {
-  list-style-type: none;
+  grid-template-rows: 1fr 15fr;
+  overflow: scroll;
 }
 
 .app-nav {
-  background: rgb(0, 0, 0);
-  color: white;
-  width: 100vw;
-  /* position: fixed; */
-  z-index: 3;
-  grid-row: 1; 
+  grid-row: 1;
+  background-color: rgba(0,0,0);
+  position: sticky;
+  top: 0; 
+  z-index: 2 !important;
 }
 
 .app-body {
-  grid-row: 2; 
+  grid-row: 2;
 }
