--- a/src/CSS/Nav.css
+++ b/src/CSS/Nav.css
@@ -1,15 +1,41 @@
 .nav {
-    display: flex; 
-    color: white; 
-    justify-content: space-evenly
+  display: grid; 
+  color: white; 
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  margin-top: -10px;
+}
+
+.logo {
+  margin-top: 1.5em; 
+  margin-right: .5em;
+  width: 75px; 
+  height: 50px; 
 }
 
 .app-name {
-  margin-left: -10rem;
-  margin-right: 14rem;
+  margin-left: 10px; 
+  display: flex;
+  grid-column: 1;
+  font-size: 18px; 
+}
+
+.clients-link {
+  grid-column: 3;
+  font-size: 24px;
+  margin-top: 1.5em;
+}
+
+.prospects-link {
+  grid-column: 4;
+  font-size: 24px;
+  margin-top: 1.5em;
 }
 
 .nav a {
-    color: white; 
-    text-decoration: none;
+  color: white; 
+  text-decoration: none;
+}
+
+.nav button {
+  margin-top: 3.3em;
 }
