--- a/src/CSS/Nav.css
+++ b/src/CSS/Nav.css
@@ -1,7 +1,7 @@
 .nav {
   display: grid; 
   color: white; 
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr .75fr 1fr 1fr .1fr .5fr;
   margin-top: -10px;
 }
 
@@ -36,20 +36,23 @@
   text-decoration: none;
 }
 
-.nav button {
-  margin-top: 2.75em;
-  padding:0.5em 1.5em;
-  border:0.16em solid #FFFFFF;
+.logout-button {
+  margin-top: 2.2em;
+  background-color: black;
   box-sizing: border-box;
   text-decoration:none;
   text-transform:uppercase;
   font-weight:400;
-  color:black;
+  color:white;
   text-align:center;
-  transition: all 0.15s;
+  transition: all 0.25s;
+  font-size: 16px;
+  width: 120px; 
+  height: 40px;
+  grid-column: 6;
 }
 
 .nav button:hover {
-  color:white;
-  background-color:black;
+  color:black;
+  background-color:white;
 }
