--- a/src/CSS/Clients.css
+++ b/src/CSS/Clients.css
@@ -11,9 +11,12 @@ li{
 }
 
 .col-1 {
-    grid-column: 2;
+    display: flex;
+    grid-column: 1;
     text-align: left; 
     margin-left: 5px; 
+    margin-top: 10px; 
+    margin-bottom: 10px;
 }
 
 .col-2 {
@@ -88,7 +91,10 @@ li{
     top:0.1em;
 }
 .images{
-   width: 5vw; 
-   height: 5vh;
-   border-radius: 50%;
+    object-fit: cover;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-right: 5px;
+    border: 1.5px solid black;
 }
