--- a/src/CSS/AddProspect.css
+++ b/src/CSS/AddProspect.css
@@ -1,4 +1,5 @@
 .prospect-form button{
+	margin: 5px;
     display:inline-block;
     padding:0.7em 1.4em;
     border-radius:0.15em;
@@ -18,8 +19,6 @@
 	flex-direction: row;
 	grid-column: 3;
 	grid-row: 2;
-	justify-self: center;
-	align-items: space-between;
 }
 
 .prospect-form button:hover {
@@ -67,5 +66,4 @@
 }
 
 #submit{
-	/* margin: 3px auto 3px 2px; */
 }
